Minor styling fix for account settings page with the oss brand
- The account settings panel no longer overlaps the logo

--- a/login-server/src/main/webapp/resources/oss/stylesheets/brand.css
+++ b/login-server/src/main/webapp/resources/oss/stylesheets/brand.css
@@ -7,3 +7,7 @@ h1 {
 .island {
     padding-top: 200px;
 }
+
+.panel-container {
+    padding-top: 200px;
+}
